# TRUGS-TOOLS

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  first.trug.json  folder.trug.json  hello.trl  pyproject.toml
.github/workflows/: ci.yml
EXAMPLES/: README.md
EXAMPLES/cross_branch/: README.md
EXAMPLES/knowledge/: README.md  complex.json  medium.json  simple.json
EXAMPLES/living/: README.md  complex.json  decision.json  medium.json  simple.json
EXAMPLES/nested/: README.md  complex.json  medium.json  simple.json
EXAMPLES/orchestration/: README.md  complex.json  medium.json  si_levels.json  simple.json
EXAMPLES/research/: complete.json  minimal.json
EXAMPLES/web/: README.md  complete.json  complex.json  medium.json  minimal.json
EXAMPLES/writer/: README.md  complete.json  complex.json  medium.json  minimal.json
REFERENCE/: GLOSSARY.md  GUIDE_quickstart.md  REFERENCE_faq.md  REFERENCE_release_notes.md  SPEC_aaa.md  SPEC_analyzer.md  SPEC_cli.md  SPEC_compliance.md  SPEC_epic.md  SPEC_filesystem.md  SPEC_folder_check.md  SPEC_folder_init.md  SPEC_folder_map.md  SPEC_folder_render.md  SPEC_folder_sync.md  SPEC_generator.md  SPEC_memory.md  SPEC_trl.md  SPEC_validator.md
branches/: README.md
branches/knowledge/: README.md
branches/law/: README.md
branches/mathgame/: README.md
branches/nested/: README.md
branches/orchestration/: README.md
branches/writer/: README.md
src/trugs_tools/: __init__.py  aaa_generator.py  aaa_renderer.py  aaa_validator.py  agent_instructions_renderer.py  analyzer.py  claude_instructions_renderer.py  cli.py  compliance_check.py  epic_sync.py  errors.py  generator.py  lang_cli.py  memory.py  memory_audit.py  memory_import.py  memory_render.py  renderer.py  rules.py  tdelete.py  tget.py  trl.py  trug_graph.py  tunlink.py  tupdate.py  validate.py  validator.py
src/trugs_tools/audit/: __init__.py  extract_trl.py  vocab_scan.py
src/trugs_tools/data/: language.trug.json
src/trugs_tools/filesystem/: __init__.py  folder_check.py  folder_init.py  folder_map.py  folder_sync.py  tadd.py  tcd.py  tdelete.py  tdim.py  tfind.py  tget.py  tinit.py  tlink.py  tls.py  tmove.py  tsync.py  tunlink.py  tupdate.py  twatch.py  twhere.py  utils.py
src/trugs_tools/internal/: __init__.py  build_language_trug.py
src/trugs_tools/schemas/: __init__.py  aaa.schema.json  core.schema.json  knowledge_v1.schema.json  nested.schema.json  orchestration.schema.json  project_tracking.schema.json  web.schema.json  writer.schema.json
src/trugs_tools/templates/: __init__.py  knowledge_v1.py  nested.py  orchestration.py  web.py  writer.py
src/trugs_tools/web/: __init__.py  crawler.py  credibility.py  extractor.py  graph_builder.py  resolver.py
src/trugs_tools/web/hub/: cross_trug_edges.py  hub_agent.py  orchestrate.py  qualifying_interest.py
src/trugs_tools/web/query/: loader.py  synthesize.py  traverse.py
src/trugs_tools/web/refresh/: diff.py  persistent_query.py
src/trugs_tools/web/weight/: topology.py
tests/: __init__.py  conftest.py  test_aaa_generator.py  test_aaa_generator_trug.py  test_aaa_renderer.py  test_aaa_validator_trug.py  test_agent_instructions_renderer.py  test_build_language_trug.py  test_claude_instructions_renderer.py  test_cli.py  test_compliance_check.py  test_examples_regression.py  test_filesystem_cli.py  test_filesystem_core.py  test_filesystem_integration.py  test_filesystem_mutation.py  test_filesystem_nav.py  test_filesystem_utils.py  test_folder_check.py  test_folder_init.py  test_folder_map.py  test_folder_render.py  test_folder_sync.py  test_generator.py  test_integration.py  test_integration_components.py  test_integration_perago.py  test_integration_trugs_research.py  test_memory.py  test_memory_audit.py  test_memory_import.py  test_memory_render.py  test_performance.py  test_renderer.py  test_rules_10_11.py  test_schemas.py  test_trl.py  test_trug_analyzer.py  test_trug_graph.py  test_validate.py  (+17 more)
tests/fixtures/: aaa_canonical_example.trug.json
tests/fixtures/folder_render/: cross_folder.json  empty_collections.json  full_featured.json  stale_docs.json
trugs-folder/: CHANGELOG.md  NOTICE  README.md  pyproject.toml
trugs-folder/src/trugs_folder/: __init__.py  cli.py  folder_check.py  folder_init.py  folder_map.py  folder_sync.py  renderer.py  tadd.py  tcd.py  tdelete.py  tdim.py  tfind.py  tget.py  tinit.py  tlink.py  tls.py  tmove.py  tsync.py  tunlink.py  tupdate.py  twatch.py  twhere.py  utils.py
trugs-folder/tests/: test_filesystem_core.py  test_filesystem_integration.py  test_filesystem_mutation.py  test_filesystem_nav.py  test_filesystem_utils.py  test_folder_check.py  test_folder_init.py  test_folder_map.py  test_folder_render.py  test_folder_sync.py  test_infer_node_type_governance.py  test_renderer.py  test_tinit_scan_edges.py
trugs-folder/tests/fixtures/folder_render/: minimal.json
