[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trugs-tools"
version = "2.0.0"
description = "TRUGS language CLI — validate TRUG graphs, compile and lint TRL, graph-node CRUD, compliance and corpus audit. Single `trug` binary. Implements TRUGS 2.0 (core_v2.0.0)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "TRUGS LLC" }]
keywords = ["trugs", "cli", "graph", "spec", "tg"]
classifiers = [
    # A18 decision (AAA #2416, HITM 2026-06-11): 2.0 launches as Beta.
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "trugs-store>=2.0.0",
    "PyYAML>=6.0",
    "jsonschema>=4.0",
    "requests>=2.28",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

# AAA #2373 commons cleave: this T1 package now ships the language CLI `trug`
# (validate/trl/graph-CRUD/compliance/audit). The unified `tg` god-binary moved
# to the trugs_start seed (trugs-start/pyproject.toml); cartography `trug-a-folder`
# lives in trugs-folder/pyproject.toml.
[project.scripts]
trug = "trugs_tools.lang_cli:main"

[project.urls]
Homepage = "https://github.com/TRUGS-LLC/TRUGS-TOOLS"
Issues = "https://github.com/TRUGS-LLC/TRUGS-TOOLS/issues"
Documentation = "https://github.com/TRUGS-LLC/TRUGS/blob/main/GETTING_STARTED.md"
Changelog = "https://github.com/TRUGS-LLC/TRUGS-TOOLS/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }
# e8 (AAA #2416): dists carry the license + patent notice explicitly.
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["trugs_tools*"]

[tool.setuptools.package-data]
trugs_tools = ["data/*.json", "schemas/*.json"]

# AAA #2736: the core trugs_tools suite is Tier-2 (deferred); the documented green
# floor is the bundled trugs-folder 554-test suite (ADR-004). `make dev` installs both
# packages editable so a bare `pytest` from the repo root collects this suite cleanly.
[tool.pytest.ini_options]
testpaths = ["trugs-folder/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
# L1 industry baseline (AAA #2190 SP2): default-mode mypy, no strictness flags —
# establish a clean baseline first; opt-in strictness is out of scope here.
python_version = "3.11"

[[tool.mypy.overrides]]
# `trugs_store` (sibling dev package) ships no `py.typed` marker and pydantic's
# stubs are not resolvable in this mypy environment; both are present and import
# cleanly at runtime. Suppress missing-import noise so genuine type errors in
# trugs_tools surface rather than being drowned out. (concern C2)
module = ["trugs_store", "trugs_store.*", "pydantic"]
ignore_missing_imports = true
